# cathy

./: .anjuta_sym_db.db  .gitignore  Makefile.am  Makefile.in  README  README.md  aclocal.m4  cathy.desktop  cathy_4.3.0-1_amd64.deb  cathy_4.6.11-1_amd64.deb  cathy_4.6.13-1_amd64.deb  config.h  config.h.in  config.status  configure  configure.ac  depends  description-pak  index.md  libtool
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
po/: Makefile  Makefile.in
src/: #cathy.ui#  Makefile  Makefile.am  Makefile.in  basemesage.cc  basemesage.h  cathy  cathy.ui  dd.cc  dd.h  dialog-new-playlist.cc  dialog-new-playlist.h  dnc.cc  dnc.h  dr.cc  dr.h  list-view-format-text.cc  list-view-format-text.h  lvt.cc  lvt.h  main.cc  mainwin.cc  mainwin.h  matrix-box.cc  matrix-box.h  mesage.cc  mesage.h
src/.deps/: basemesage.Po  dd.Po  dialog-new-playlist.Po  dnc.Po  dr.Po  list-view-format-text.Po  lvt.Po  main.Po  mainwin.Po  matrix-box.Po  mesage.Po
